tooling/nargo_cli/tests/snapshots/execution_success/unsafe_range_constraint/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field) {
    x.assert_max_bit_size::<48>();
}
